# HAL-YieldOS

./: .gitignore  CHECKSUMS.sha256  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.json  Makefile  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  demo_tool_api.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
docs/: ANONYMIZATION_GUIDE.md  ARCHITECTURE.md  DELIVERY_GUIDE.md  DEMO_GUIDE.md  DEVELOPER_VALIDATION.md  DOCS_INDEX.md  DOMAIN_PACKS.md  FORGE_EXPORT_INTERFACE.md  FUNCTIONAL_YIELD_ESSENCE.md  FUNCTIONAL_YIELD_FAB_SEED.md  GITHUB_CI.md  GITHUB_LAUNCH_NOTES.md  GITHUB_RELEASE_CHECKLIST.md  GITHUB_REPO_METADATA.md  GITHUB_UPLOAD_CHECKLIST.md  KNOWN_LIMITATIONS.md  LIMITATIONS.md  MARKET_POSITIONING.md  PARTNER_AI_INTERFACE.md  PILOT_ONE_PAGER.md  PILOT_PROPOSAL_TEMPLATE.md  PILOT_READINESS.md  PUBLIC_SAFETY_BOUNDARY.md  RELEASE_GUIDE.md  REPOSITORY_MAP.md  ROBOT_DATA_SCHEMA.md  ROBOT_PILOT_READY.md  SAFETY_BOUNDARY.md  SAMPLE_DATA_NOTICE.md  SAMPLE_OUTPUTS_GUIDE.md  SEMICONDUCTOR_PILOT_READY.md  TECHNICAL_SPEC.md  TOOL_API.md  VALIDATION_METHOD.md  YIELDOS_IS_NOT_AI.md
scripts/: build_release.py  check_launch_guard.py  check_release_artifact.py  make_release_zip.py  run_demo.py  run_public_demo.py
tests/: conftest.py  helpers.py  test_case_manifest_completeness.py  test_citation_file.py  test_cli_smoke.py  test_cli_unified_memory.py  test_contracts.py  test_cross_step_rca_guard.py  test_data_sufficiency_embedded.py  test_docs_version_consistency.py  test_domain_pack_protocol.py  test_domains.py  test_functional_passport_essence_fields.py  test_functional_yield_core.py  test_functional_yield_essence.py  test_functional_yield_lineage_summary.py  test_fyfab_seed.py  test_github_actions_exist.py  test_github_final_polish_docs.py  test_github_launch_notes.py  test_github_templates_exist.py  test_gitignore_hygiene.py  test_golden.py  test_human_review_preparation.py  test_installed_doctor_deep.py  test_ja_docs.py  test_launch_guard_cross_platform_paths.py  test_launch_guard_script.py  test_optimizers.py  (+104 more)
(+178 files in other folders)
